--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit"><img src="images/01.jpg" alt="" title="Valley" /></a></div>
+						<div class="3u 12u(mobile)"><a href="#" class="image fit"><img src="images/01.jpg" alt="" title="Valley" /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit"><img src="images/02.jpg" alt="" title="LOVE" /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit"><img src="images/03.jpg" alt="" title="Macau Tower" /></a></div>
 						<div class="3u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit"><img src="images/04.jpg" alt="" title="Sunset" /></a></div>
