--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit"><img src="images/01.jpg" alt="" title="Valley" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit"><img src="images/02.jpg" alt="" title="LOVE" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit"><img src="images/03.jpg" alt="" title="Macau Tower" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit"><img src="images/04.jpg" alt="" title="Sunset" /></a></div>
+						<div class="image fit"><a href="images/fulls/01.jpg" class="image fit"><img src="images/01.jpg" alt="" title="Valley" /></a></div>
+						<div class="image fit"><a href="images/fulls/02.jpg" class="image fit"><img src="images/02.jpg" alt="" title="LOVE" /></a></div>
+						<div class="image fit"><a href="images/fulls/03.jpg" class="image fit"><img src="images/03.jpg" alt="" title="Macau Tower" /></a></div>
+						<div class="image fit"><a href="images/fulls/04.jpg" class="image fit"><img src="images/04.jpg" alt="" title="Sunset" /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit"><img src="images/05.jpg" alt="" title="Sunset2" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit"><img src="images/06.jpg" alt="" title="River with Sakura" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/07.jpg" class="image fit"><img src="images/07.jpg" alt="" title="Beach" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/08.jpg" class="image fit"><img src="images/08.jpg" alt="" title="Sunrise" /></a></div>
+						<div class="image fit"><a href="images/fulls/05.jpg" class="image fit"><img src="images/05.jpg" alt="" title="Sunset2" /></a></div>
+						<div class="image fit"><a href="images/fulls/06.jpg" class="image fit"><img src="images/06.jpg" alt="" title="River with Sakura" /></a></div>
+						<div class="image fit"><a href="images/fulls/07.jpg" class="image fit"><img src="images/07.jpg" alt="" title="Beach" /></a></div>
+						<div class="image fit"><a href="images/fulls/08.jpg" class="image fit"><img src="images/08.jpg" alt="" title="Sunrise" /></a></div>
 					</div>
 				</div>
 			</article>
