--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<article class="container box style2">
 				<header>
 					<h2>MY PHOTOS</h2>
-					<p>I show you some of my photos.</p>
+					<p>I show you some of my photos.<br />Press it and see the full size.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
